erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | DEVELOPER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    GAMES {
        INT game_id PK
        INT developer_id FK
        VARCHAR title
        TEXT description
        DECIMAL price
        DECIMAL overall_rating
        VARCHAR status "DRAFT | ACTIVE | TAKEN_DOWN"
    }
    TRANSACTION_ITEMS {
        INT item_id PK
        INT transaction_id FK
        INT game_id FK
        DECIMAL purchase_price
    }
    GAME_LICENSES {
        INT license_id PK
        INT game_id FK
        INT user_id FK
        INT transaction_item_id FK
        DATETIME acquired_date
        VARCHAR status "ACTIVE | REVOKED | FROZEN"
    }

    USERS ||--o{ GAME_LICENSES : owns
    GAMES ||--o{ GAME_LICENSES : licensed_as
    TRANSACTION_ITEMS ||--|| GAME_LICENSES : generates
